--- a/term1week7.ipynb
+++ b/term1week7.ipynb
@@ -2,46 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: plotchecker in /opt/anaconda3/lib/python3.12/site-packages (0.2.0)\n",
-      "Requirement already satisfied: matplotlib>=2 in /opt/anaconda3/lib/python3.12/site-packages (from plotchecker) (3.9.2)\n",
-      "Requirement already satisfied: numpy in /opt/anaconda3/lib/python3.12/site-packages (from plotchecker) (1.26.4)\n",
-      "Requirement already satisfied: six in /opt/anaconda3/lib/python3.12/site-packages (from plotchecker) (1.16.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (1.2.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (4.51.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (24.1)\n",
-      "Requirement already satisfied: pillow>=8 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (10.4.0)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (3.1.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /opt/anaconda3/lib/python3.12/site-packages (from matplotlib>=2->plotchecker) (2.9.0.post0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# this is needed for the plotting questions, ideally.\n",
     "# if it fails, you may need to run jupyter\n",
     "# with administrator privileges\n",
     "# if *that* fails, try, in the cell below,\n",
     "# changing autograder_term1week7 to \n",
-    "\n",
     "# autograder_term1week7_alt\n",
     "import sys\n",
+    "\\\\\n",
+    "\n",
     "!{sys.executable} -m pip install plotchecker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "\n",
     "from autograder_term1week7 import *\n",
     "_globals = globals()\n",
@@ -103,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -181,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -205,6 +189,12 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# initialize x\n",
     "x = 5.0\n",
     "\n",
@@ -217,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -247,7 +237,7 @@
        "1"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -319,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -350,7 +340,7 @@
        "1"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -409,6 +399,8 @@
     "\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "fac100=1\n",
     "\n",
     "for n in range (99):\n",
@@ -418,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -448,7 +440,7 @@
        "1"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -507,12 +499,13 @@
     "a, b= 1, 1\n",
     "for n in range(9):\n",
     "    a,b =a+b,a+2*b\n",
-    "print(b)\n"
+    "print(b)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -542,7 +535,7 @@
        "1"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -609,6 +602,7 @@
     }
    ],
    "source": [
+    "\n",
     "from math import pi, factorial, sqrt\n",
     "\n",
     "total1 = 0.0\n",
@@ -632,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -665,7 +659,7 @@
        "3"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -702,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 22,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -744,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 23,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -774,7 +768,7 @@
        "1"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -806,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -824,10 +818,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x167545820>]"
+       "[<matplotlib.lines.Line2D at 0x167f690a0>]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -842,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 26,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -875,7 +869,7 @@
        "1"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 28,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -953,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -983,7 +977,7 @@
        "1"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1013,10 +1007,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16b7e4ef0>]"
+       "[<matplotlib.lines.Line2D at 0x168bddee0>]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 31,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1064,7 +1058,7 @@
        "1"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 33,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1127,6 +1121,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "# import necessary function\n",
     "from math import exp\n",
     "\n",
@@ -1144,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 34,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1174,7 +1170,7 @@
        "1"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 36,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1230,6 +1226,7 @@
     }
    ],
    "source": [
+    "\n",
     "# initialize a, b and fiblist\n",
     "a, b = 1, 1\n",
     "fiblist = [a, b]\n",
@@ -1247,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 37,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1277,7 +1274,7 @@
        "1"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1317,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1333,6 +1330,7 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "from math import pi, factorial, sqrt\n",
     "\n",
     "# summation (i)\n",
@@ -1347,7 +1345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1376,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1402,7 +1400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1436,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 43,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1466,7 +1464,7 @@
        "1"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1478,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1508,7 +1506,7 @@
        "1"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 45,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1550,7 +1548,7 @@
        "1"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1562,7 +1560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 46,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1580,15 +1578,20 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x16b9951f0>]"
+       "[<matplotlib.lines.Line2D at 0x168cbc2f0>]"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# plot\n",
     "fig, ax = plt.subplots()\n",
     "plt.plot(range(21), list1)\n",
@@ -1598,7 +1601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 47,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1631,7 +1634,7 @@
        "1"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1674,7 +1677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1688,23 +1691,33 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.236067843544479\n"
+     ]
+    }
+   ],
    "source": [
     "# initialize x\n",
     "x = 5.0\n",
     "\n",
     "# while loop\n",
+    "while abs(x**2-5) > 10**-6:\n",
     "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "    x = (x+5.0)/(x+1.0)\n",
     "\n",
     "# print final value of x\n",
-    "print(x)"
+    "\n",
+    "print(x)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1720,7 +1733,25 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Question 3 (a) passed!!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 1 Mark\n",
     "question3_a(x)"
@@ -1764,20 +1795,14 @@
    },
    "outputs": [],
    "source": [
-    "# import necessary function\n",
-    "# (delete this line and insert your import statement here)\n",
-    "\n",
-    "# initialize oldx and newx\n",
+    "from math import exp\n",
     "oldx = 0.0\n",
     "newx = exp(-oldx)\n",
     "\n",
-    "# while loop\n",
-    "# (delete this line and insert your while loop here)\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
-    "\n",
-    "# print final value of newx\n",
-    "print(newx)"
+    "while abs(newx-oldx) < 10**6:\n",
+    "    oldx, newx = newx, exp(-oldx)\n",
+    "    \n",
+    "print(newx)\n"
    ]
   },
   {
@@ -1842,6 +1867,9 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
+    "\n",
     "# (delete this line and insert your code here)\n",
     "# YOUR CODE HERE\n",
     "raise NotImplementedError()\n",
